rounded off payments value and fixed the title wrap

--- a/app/bank-statement-analyser/css/consolidation-view.css
+++ b/app/bank-statement-analyser/css/consolidation-view.css
@@ -67,6 +67,7 @@
     overflow: scroll;
 }
 .group-table{
+    table-layout: fixed;
     padding: 5px;
     width: 100%;
     text-align: center;
